--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "teatimer"
+name = "teaticker"
 version = "0.1.0"
 authors = ["jamesinlow"]
 edition = "2018"
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 crossterm = "0.18.2"
 figlet-rs = "0.1.3"
+clap = "3.0.0-beta.2"
